# aic-flight-deck

./: .gitignore  LICENSE  README.md  api.py  app.py  icon.icns  lark.rsrc  pyproject.toml  run_gui.py  run_gui.spec
.github/workflows/: build-and-release.yml  build-linux.yml  build-mac.yml  build-windows.yml
templates/: index.html
